dnl Process this file with autoconf to produce a configure script.
AC_INIT(irio.c)

AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h termios.h memory.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkfifo select strcspn strerror strspn)


INSTALL_SWTEST=
dnl checks to see if software test versions should be made
AC_ARG_WITH(swtest,
[  --with-swtest           also build software-only library and utils],
NORMAL=both
INSTALL_SWTEST=install-swtest,
NORMAL=standard
)

AC_SUBST(NORMAL)
AC_SUBST(INSTALL_SWTEST)

AC_OUTPUT(Makefile, echo timestamp > stamp-h)
